--- a/Website/Views/Home/About.cshtml
+++ b/Website/Views/Home/About.cshtml
@@ -8,27 +8,16 @@
 </hgroup>
 
 <article>
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
+    <table width="100%">
+        <tr>
+            <td>
+                <img height="250" src="../Images/doge.png" title="Much impress. So doge. &#10;XKCD really taught you to hover over images, didn't it?" />
+            </td>
+            <td>
+                This is where I put info about myself. <br />
+                Once I figure out what I'm gonna say, that is! <br />
+                I'm looking really professional now, though. So that's something.
+            </td>
+        </tr>
+    </table>
 </article>
-
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
