--- a/Website/Views/Home/Contact.cshtml
+++ b/Website/Views/Home/Contact.cshtml
@@ -8,16 +8,20 @@
 </hgroup>
 
 <section class="contact">
+    <h5>In which we discover how you'll be able to contact me. If you need to. Only if you need to.</h5>
+</section>
+
+<section class="contact">
     <header>
         <h3>Phone</h3>
     </header>
     <p>
-        <span class="label">Main:</span>
-        <span>425.555.0100</span>
+        <span class="label">Work:</span>
+        <span>+32 (0) 3 860 16 93</span>
     </p>
     <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
+        <span class="label">Mobile:</span>
+        <span>+32 (0) 477 89 61 37</span>
     </p>
 </section>
 
@@ -26,16 +30,13 @@
         <h3>Email</h3>
     </header>
     <p>
-        <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
+        <span class="label">Work:</span>
+        <span><a href="mailto:glenn@eventdrive.be">glenn@eventdrive.be</a></span>
     </p>
     <p>
-        <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
+        <span class="label">Personal:</span>
+        <span><a href="mailto:Coren89@gmail.com">Coren89@gmail.com</a></span> <br /> <br />
+        <span>Note to self: get more professional looking personal email address.</span>
     </p>
 </section>
 
@@ -44,7 +45,7 @@
         <h3>Address</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        Mechelsesteenweg 303<br />
+        2830 Blaasveld, Belgium
     </p>
 </section>
