--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
+<script type="text/javascript">
+    function goToXKCD() {
+        document.getElementById('wobsiteLink').click();
+    }
+</script>
+
 @section featured {
     <section class="featured">
         <div class="content-wrapper">
@@ -9,37 +15,48 @@
                 <h2>@ViewBag.Message</h2>
             </hgroup>
             <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
+                I thought it was about time I set up my own webpage, so I quickly patched this together. It's still very much a work in progress, but you're welcome to have a look!
+                I don't really have much content yet, but I'll putting in some stuff really soon. I bet you're really curious now. Yup. <br />
             </p>
         </div>
     </section>
 }
-<h3>We suggest the following:</h3>
+<h2>Latest News:</h2>
 <ol class="round">
     <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
+        <h5 style="cursor:pointer;" onclick="goToXKCD();">I've got a wobsite</h5>
+        Research proves having a website makes you 69% more attractive to the opposite sex. <br />
+        It also makes you look 150% more professional. <br />
+        Especially if you've built it yourself! <br />
+        <a href="http://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">Learn more…</a>
     </li>
 
     <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
+        <h5>Microsoft's hosting it for free</h5>
+        Because they like their developers, and they thought I should be rewarded for being so awesome. <br />
+        Thanks Microsoft!
     </li>
 
     <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
+        <h5>Hi, Cuadie's mom!</h5>
+        And of course, I've put something for the ladies on the landing page. <br />
+        There's still room for improvement, though... <br />
+        ... <br />
+        That's what she said. <br />
+    </li>
+
+    <li class="four">
+        <h5>LAN-party registration is now live</h5>
+        I've added a page for the LAN-party this weekend, things you can do there:
+        <ul>
+            <li>Look up the address.</li>
+            <li><b>Register yourself</b> for the party.</li>
+            <li>Wonder why I'm putting in all of this effort just for a 5-person LAN-party.</li>
+        </ul>
+        <b>@Html.ActionLink("Take me there!", "Lan", "Home")</b>
     </li>
 </ol>
+
+<div style="display:none;">
+    <a id="wobsiteLink" href="https://xkcd.com/148/" target="_blank">wobsite</a>
+</div>
